--- a/index.html
+++ b/index.html
@@ -392,8 +392,8 @@
             '1h': 1.5,
             '2h': 2.0,
             '4h': 2.5</span></div>
-                                                <div class="metadata-item"><span class="metadata-label">Source Weights</span><span class="metadata-value">Wick (1.0), Clsoe (1.5)</span></div>
-</div>
+                                             <div>   <div class="metadata-item"><span class="metadata-label">Source Weights</span><span class="metadata-value">Wick (1.0), Close (1.5)</span></div>
+</div></div>
                     </div>
                 </div>
             </div>
