--- a/index.html
+++ b/index.html
@@ -288,8 +288,7 @@
             <button id="stats-fab" title="Show Stats"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M32 32c17.7 0 32 14.3 32 32V400c0 8.8-7.2 16-16 16H48c-8.8 0-16-7.2-16-16V64C32 46.3 46.3 32 64 32H160c17.7 0 32 14.3 32 32s-14.3 32-32 32H96v64c0 17.7-14.3 32-32 32s-32-14.3-32-32V96H64V64zM256 224c0-17.7-14.3-32-32-32H160c-17.7 0-32 14.3-32 32s14.3 32 32 32h64v64c0 17.7 14.3 32 32 32s32-14.3 32-32V224zM352 288c-17.7 0-32 14.3-32 32v64H256c-17.7 0-32 14.3-32 32s14.3 32 32 32h96c17.7 0 32-14.3 32-32V320c0-17.7-14.3-32-32-32zM480 32c17.7 0 32 14.3 32 32s-14.3 32-32 32H416v64c0 17.7-14.3 32-32 32s-32-14.3-32-32V96h-1.5c-16.3 0-30.8-12.4-32-28.5c-.2-2.1-.2-4.2-.2-6.4V64c0-17.7 14.3-32 32-32H480z"/></svg></button>
         </div>
 
-        <h1>Live Trade & Journal Tracker</h1>
-        <p class="subtitle">Data updates in real-time for all viewers.</p>
+    
         <div class="tabs">
             <button class="tab-link active" data-tab="tracker">Trade Tracker</button>
             <button class="tab-link" data-tab="journal">Journal</button>
@@ -378,8 +377,8 @@
             '1h': 1.5,
             '2h': 2.0,
             '4h': 2.5</span></div>
-                                             <div>   <div class="metadata-item"><span class="metadata-label">Source Weights</span><span class="metadata-value">Wick (1.0), Close (1.5)</span></div>
-</div></div>
+                                             <p>  <div class="metadata-item"><span class="metadata-label">Source Weights</span><span class="metadata-value">Wick (1.0), Close (1.5)</span></div>
+</div></p>
                     </div>
                 </div>
             </div>
