--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
             <button class="tab-link" data-tab="journal">Journal</button>
             <button class="tab-link" data-tab="snapshot">Snapshot</button>
             <button class="tab-link" data-tab="sr-levels">S/R Levels</button>
-            <button class="tab-link" data-tab="analysis">Analysis Table</button>
+            <button class="tab-link" data-tab="analysis">Current Setups</button>
         </div>
         
         <div id="tracker-tab" class="tab-content active">
