--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
             padding: 10px; 
             border: 1px solid var(--border-color); 
             border-radius: 4px;
-            font-size: 14px; 
+            font-size: 9px; 
             width: 100%; 
             box-sizing: border-box; 
             font-family: inherit; 
@@ -289,7 +289,7 @@
 
             /* New responsive styles for the analysis table */
             #analysis-tab th, #analysis-tab td {
-                font-size: 13px;
+                font-size: 9px;
                 padding: 8px 4px;
                 white-space: normal; /* Allow headers to wrap */
             }
@@ -328,7 +328,7 @@
             <button class="tab-link" data-tab="journal">Journal</button>
             <button class="tab-link" data-tab="snapshot">Snapshot</button>
             <button class="tab-link" data-tab="sr-levels">S/R Levels</button>
-            <button class="tab-link" data-tab="analysis">Analysis Table</button>
+            <button class="tab-link" data-tab="analysis">Current Setups</button>
         </div>
         
         <div id="tracker-tab" class="tab-content active">
