--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             resize: vertical;
             line-height: 1.6;
             margin-top: 5px;
-            overflow-y: hidden;
+            overflow-y: auto;
         }
         
         #journal-entry {
