--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
         .controls-container { display: flex; flex-wrap: wrap; justify-content: center; align-items: center; gap: 20px; margin: 20px auto; }
         .controls-container > div { display: flex; align-items: center; gap: 8px; }
         
-        .journal-dual-input-container {
-            display: flex;
-            gap: 15px;
-            align-items: stretch;
-        }
+.journal-dual-input-container {
+    display: flex;
+    gap: 15px;
+    align-items: start; /* This is the fix */
+}
 
         /* --- CSS-ONLY RESIZING SOLUTION --- */
         #journal-entry, #persistent-notes-entry {
