--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                     <table id="current-setups-table-1" class="setups-table">
                         <thead>
                             <tr>
-                                <th rowspan="2">Timeframe</th>
+                                <th rowspan="2">TF</th>
                                 <th colspan="3">0-Candle</th>
                                 <th colspan="3">4-Candle</th>
                             </tr>
@@ -521,7 +521,7 @@
                      <table id="current-setups-table-2" class="setups-table">
                         <thead>
                             <tr>
-                                <th rowspan="2">Timeframe</th>
+                                <th rowspan="2">TF</th>
                                 <th colspan="3">0-Candle</th>
                                 <th colspan="3">4-Candle</th>
                             </tr>
