--- a/index.html
+++ b/index.html
@@ -497,15 +497,15 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr><th>5m</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                            <tr><th>15m</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                            <tr><th>30m</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                            <tr><th>1h</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                            <tr><th>2h</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                            <tr><th>4h</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                            <tr><th>D</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                            <tr><th>W</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                            <tr><th>M</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                            <tr><th>5min</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                            <tr><th>15min</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                            <tr><th>30min</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                            <tr><th>1hour</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                            <tr><th>2hour</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                            <tr><th>4hour</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                            <tr><th>daily</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                            <tr><th>weekly</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                            <tr><th>monthly</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
                         </tbody>
                     </table>
                 </div>
@@ -535,15 +535,15 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr><th>5m</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                            <tr><th>15m</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                            <tr><th>30m</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                            <tr><th>1h</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                            <tr><th>2h</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                            <tr><th>4h</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                            <tr><th>D</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                            <tr><th>W</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-                            <tr><th>M</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                    <tr><th>5min</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                            <tr><th>15min</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                            <tr><th>30min</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                            <tr><th>1hour</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                            <tr><th>2hour</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                            <tr><th>4hour</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                            <tr><th>daily</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                            <tr><th>weekly</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+                            <tr><th>monthly</th><td></td><td></td><td></td><td></td><td></td><td></td></tr>
                         </tbody>
                     </table>
                 </div>
