--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
                     authDomain: "journal-a003f.firebaseapp.com",
                     databaseURL: "https://journal-a003f-default-rtdb.asia-southeast1.firebasedatabase.app",
                     projectId: "journal-a003f",
-                    storageBucket: "journal-a003f.appspot.com",
+                    storageBucket: "journal-a003f.firebasestorage.app", // <-- CORRECTED NAME
                     messagingSenderId: "1038636626553",
                     appId: "1:1038636626553:web:7a91c321e39c146bdc9aa8"
                 },
